# hybrid-ai-quantum-platform

./: .dockerignore  .gitignore  .gitmessage  AI_USAGE.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml  research.yml  task.yml  test.yml
.github/workflows/: ci.yml  conventions.yml  label-project-tracking-items.yml  publish-package.yml  release.yml  sync-project-fields.yml  test-change-gate.yml
artifacts/: README.md
artifacts/baselines/: portfolio-vertical-slice_20260721_155133_191743Z.json  portfolio-vertical-slice_20260721_155133_191743Z.metadata.json  portfolio-vertical-slice_20260721_155208_388818Z.json  portfolio-vertical-slice_20260721_155208_388818Z.metadata.json  portfolio-vertical-slice_20260723_172419_306573Z.json  portfolio-vertical-slice_20260723_172419_306573Z.metadata.json  portfolio-vertical-slice_20260723_194539_097245Z.json  (+11 more)
config/: default.yaml
demos/: portfolio_vertical_slice.py  promote_artifact.py  quickstart.py
docs/: DIAGRAMS.md  MAKEFILE.md  ROADMAP.md  configuration.md  detailed-architecture.md  domain-cli-template.md  execution-instance-template.md  maxcut-configuration.md  mermaid-architecture.md  mermaid-object-collaboration.md  portfolio-vertical-slice.md  problem-domain-template.md  testing.md
optengine/: __init__.py  analysis.py  artifact.py  candidate.py  catalog.py  cli.py  compatibility.py  context.py  decision.py  engine.py  errors.py  evaluation.py  execution.py  explanation.py  identity.py  interpretation.py  mathematics.py  objective.py  recommendation.py  registry.py  runner.py  solution.py  strategy.py  trace.py
templates/: execution_instance.py  problem_domain.py
tests/: conftest.py  support.py  test_analysis_execution.py  test_architecture_guardrails.py  test_artifact.py  test_base_contract_coverage.py  test_cli.py  test_compatibility_aliases.py  test_dev.py  test_dev_commands.py  test_domain_chain_trace.py  test_domain_portfolio.py  test_engine_workflow.py  test_integration.py  test_mathematics.py  test_maxcut.py  test_policy.py  test_presentation_api.py  test_project_automation.py  test_public_api.py  test_publish.py  test_quickstart.py  test_registry.py  test_release_plan.py  test_release_refactor_regressions.py  test_runner.py  test_runtime_presentation.py  test_utility.py  test_writer.py
tools/: dev.py  publish.py  sync_project_fields.py  update_release_plan.py
(+102 files in other folders)
