[build-system]
requires = [
    "setuptools>=80",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "optengine"
version = "0.2.0"
description = "A feasibility-aware hybrid AI–Quantum optimization platform."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "dimod>=0.12.22",
    "dwave-samplers>=1.8.0",
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "build",
    "python-semantic-release",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
include = [
    "optengine",
    "optengine.*",
]
exclude = [
    "demos",
    "tests",
    "config",
    "scratch",
    "outputs",
    "artifacts",
]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
commit_parser = "conventional"
tag_format = "v{version}"

version_toml = [
    "pyproject.toml:project.version",
]

version_variables = [
    "optengine/_version.py:__version__",
]

build_command = """
python -m pip install uv==0.11.28
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
uv build
"""

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]


[tool.coverage.run]
branch = true
source = ["optengine"]

[tool.coverage.report]
show_missing = true
skip_covered = false
